--- a/projects/inked-productions.html
+++ b/projects/inked-productions.html
@@ -88,7 +88,7 @@
                     <li><a class="nav_item" href="about.html">About</a></li>
                     <li><a class="nav_item" href="about.html/#services">Services</a></li>
                     <li><a class="nav_item" href="projects.html">Projects</a></li>
-                    <li><a class="nav_item btn btn_pry" href="#contact">Get In Touch</a></li>
+                    <li><a class="nav_item btn btn_pry cta" href="#contact">Get In Touch</a></li>
                 </ul>
             </nav>
             <p>©2023 ByteSized Solutions. All rights reserved</p>
