--- a/services.html
+++ b/services.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <!-- navbar -->
-        <nav class="header flex container section_spacing relative">
+        <nav class="header flex container about_servicessection_spacing relative">
             <!-- main brand logo -->
             <section class="brand flex">
                 <img src="/assets/images/logo.svg" alt="" class="brand_icon">
@@ -45,9 +45,9 @@
                     </div>
         
                 </section>
-        <section class="container section_spacing grid services_articles">
+        <section class="container about_services section_spacing grid services_articles">
             <h2>Cloud Computing Solutions</h2>
-            <article class="services_article_block grid">
+            <article class="services_article_block  grid">
             <iframe width="100%" height="315" src="https://www.youtube.com/embed/hB1NVzqn7PU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
                 <h3>Cloud computing: The future of computing, in a fluffy white package.</h3>
@@ -76,9 +76,9 @@
             </article>
             
         </section>
-        <section class="container section_spacing grid services_articles">
+        <section class="container about_servicessection_spacing grid services_articles">
             <h2>Cyber Security and Data Protection</h2>
-            <article class="services_article_block grid">
+            <article class="services_article_block  grid">
                 <iframe width="100%" height="315" src="https://www.youtube.com/embed/1vV0t2XbtuU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
                 <h3>Why did the cyber criminal cross the network? To get to the other side and steal your data!</h3>
@@ -100,10 +100,10 @@
                 </ul>
             </article>
         </section>
-        <section class="container section_spacing grid services_articles">
+        <section class="container about_servicessection_spacing grid services_articles">
             <h2>Network Design and Implementation</h2>
 
-            <article class="services_article_block grid">
+            <article class="services_article_block  grid">
                 <h3>Making technology work for you, not the other way around.</h3>
                 <iframe width="100%" height="315" src="https://www.youtube.com/embed/iyLWgpghjHY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
@@ -122,9 +122,9 @@
                 </ol>
             </article>
         </section>
-        <section class="container section_spacing grid services_articles">
+        <section class="container about_servicessection_spacing grid services_articles">
             <h2>Managed IT Services</h2>
-            <article class="services_article_block grid">
+            <article class="services_article_block  grid">
                 <iframe width="100%" height="315" src="https://www.youtube.com/embed/4vkIaBUsNvI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <h3>Because technology is too complicated for just one person to handle.</h3>
                 <p>Managed IT services provide a comprehensive solution for businesses to manage and maintain their
@@ -145,9 +145,9 @@
                 </ul>
             </article>
         </section>
-        <section class="container section_spacing grid services_articles">
+        <section class="container about_servicessection_spacing grid services_articles">
             <h2>Software Development and Customization</h2>
-            <article class="services_article_block grid">
+            <article class="services_article_block  grid">
                 <iframe width="100%" height="315" src="https://www.youtube.com/embed/fGdqnWWAXE0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h3>The era of applications; a direct window to your customers</h3>
                 <p>Software development and customization can help businesses take advantage of the latest technology to
@@ -168,9 +168,9 @@
                 </ul>
             </article>
         </section>
-        <section class="container section_spacing grid services_articles">
+        <section class="container about_servicessection_spacing grid services_articles">
             <h2>Quality Assurance and Testing</h2>
-            <article class="services_article_block grid">
+            <article class="services_article_block  grid">
             <iframe width="100%" height="315" src="https://www.youtube.com/embed/0hzqHwu1i_I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
                 <h3>Be reliable, stay reliable!</h3>
@@ -210,7 +210,7 @@
                     <li><a class="nav_item" href="about.html">About</a></li>
                     <li><a class="nav_item" href="about.html/#services">Services</a></li>
                     <li><a class="nav_item" href="projects.html">Projects</a></li>
-                    <li><a class="nav_item btn btn_pry" href="#contact">Get In Touch</a></li>
+                    <li><a class="nav_item btn btn_pry cta" href="#contact">Get In Touch</a></li>
                 </ul>
             </nav>
             <p>©2023 ByteSized Solutions. All rights reserved</p>
