--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
             </section>
             <!--mobile nav toggle-->
             <label class="hamburger_icon" for="toggle"><i class="fa fa-bars"></i></label>
-            <input type="checkbox" name="" id="toggle" hidden>
+            <input type="checkbox" id="toggle" hidden>
 
             <ul class=" nav_items flex">
                 <li><a aria-current="page" class="nav_item" href="index.html">Home</a></li>
                 <li><a class="nav_item" href="about.html">About</a></li>
                 <li><a class="nav_item" href="about.html#services">Services</a></li>
                 <li><a class="nav_item" href="projects.html">Projects</a></li>
-                <li><a class="nav_item btn btn_pry cta" href="#contact">Get In Touch</a></li>
+                <li><a class="nav_item btn btn_pry" href="#contact">Get In Touch</a></li>
             </ul>
         </nav>
     </header>
