--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
                 <li><a aria-current="page" class="nav_item" href="index.html">Home</a></li>
                 <li><a class="nav_item" href="about.html">About</a></li>
                 <li><a class="nav_item" href="about.html#services">Services</a></li>
-                <li><a class="nav_item" href="projects.html">Projects</a></li>
+                <li><a aria-current="page" class="nav_item" href="projects.html">Projects</a></li>
                 <li><a class="nav_item btn btn_pry cta" href="#contact">Get In Touch</a></li>
             </ul>
         </nav>
@@ -81,7 +81,7 @@
                             needed a reliable and efficient solution to keep up with their growing demands and ensure
                             their workflow remains smooth and seamless. With this in mind, they approached ByteSized
                             Solutions for help.</span>
-                            <a href="about.html#services" class="btn btn_sec card_btn">Read more <i
+                            <a href="/projects/inked-productions.html" class="btn btn_sec card_btn">Read more <i
                                 class="fa fa-arrow-right"></i></a>
                     </section>
                 </div>
