--- a/projects/inked-productions.html
+++ b/projects/inked-productions.html
@@ -20,70 +20,75 @@
                 <section class="brand flex">
                     <img src="/assets/images/logo.svg" alt="" class="brand_icon">
                     <a class="brand" href="index.html">
-                        <h1><span>ByteSized</span><br> Solutions</h1>
+                        <span>ByteSized</span><br> Solutions
                     </a>
                 </section>
                 <!--mobile nav toggle-->
                 <label class="hamburger_icon" for="toggle"><i class="fa fa-bars"></i></label>
-                <input type="checkbox" name="" id="toggle" hidden>
+                <input type="checkbox" id="toggle" hidden>
 
                 <ul class=" nav_items flex">
                     <li><a  class="nav_item" href="index.html">Home</a></li>
                     <li><a class="nav_item" href="#about">About</a></li>
-                    <li><a aria-current="page"class="nav_item" href="#projects">Projects</a></li>
+                    <li><a aria-current="page" class="nav_item" href="#projects">Projects</a></li>
                     <li><a class="nav_item btn btn_pry" href="#contact">Get In Touch</a></li>
                 </ul>
             </nav>
         </header>
         <!-- hero section -->
-        <section id="hero" class="hero flex row">
-            <div class="bg_overlay"></div>
-            <div class="main_text flex row">
-                <h1 class="main_title">Inked Productions</h1>
+               <!-- hero section -->
+               <section id="hero" class="hero flex row">
+                <div class="main_text flex row">
+                    <h1 class="main_title">Projects</h1>
+            <p class="main_subtitle">Case Study</p>
 
-            </div>
+                </div>
+    
+            </section>
+    <section class="container about_services section_spacing grid services_articles">
+        <h2>Inked Productions</h2>
+        <article class="services_article_block  grid">
+        <iframe width="100%" height="315" src="https://www.youtube.com/embed/hB1NVzqn7PU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-        </section>
-        <section class="container">
-            <h2 class="article_title">Introduction</h2>
-            <p class="article_text">Inked Productions is a leading film production company, known for
+            <h3>Case Study</h3>
+            <p>Inked Productions is a leading film production company, known for
                 producing critically acclaimed and commercially successful films. The company faced a
                 challenge in setting up a 3-room film edit suite with shared storage, to support their
                 growing business. With the increasing demand for their services, they required a reliable
                 and efficient IT solution that could meet their unique needs and support their growing
                 business.</p>
-
-
-            <h3 class="sub_title">Challenge</h3>
-            <p class="article_text">Inked Productions was in need of setting up a film edit suite with three rooms, all
-                connected by a shared storage solution. They were in search of a reliable and efficient system to
-                support their film production process.</p>
-            <h3 class="sub_title">Solution</h3>
-            <p class="article_text">ByteSized Solutions implemented a cloud-based storage solution that would allow the
-                team at Inked Productions to access their files and projects from any room. This solution made it
-                possible for the team to work together seamlessly on large-scale projects without having to transfer
-                files between rooms. The ByteSized Solutions team also set up a secure network that ensured the
-                confidentiality of the clients' projects and data.</p>
-            <h3 class="sub_title">Impact</h3>
-            <p class="article_text">The implementation of the cloud-based storage solution and secure network had a
-                significant impact on the productivity and workflow of Inked Productions. The team was able to complete
-                projects faster and more efficiently, with less downtime. The clients were also pleased with the level
-                of security and peace of mind that came with having their projects and data protected.
-            </p>
-        </section>
+                <h3 class="sub_title">Challenge</h3>
+                <p class="article_text">Inked Productions was in need of setting up a film edit suite with three rooms, all
+                    connected by a shared storage solution. They were in search of a reliable and efficient system to
+                    support their film production process.</p>
+                <h3 class="sub_title">Solution</h3>
+                <p class="article_text">ByteSized Solutions implemented a cloud-based storage solution that would allow the
+                    team at Inked Productions to access their files and projects from any room. This solution made it
+                    possible for the team to work together seamlessly on large-scale projects without having to transfer
+                    files between rooms. The ByteSized Solutions team also set up a secure network that ensured the
+                    confidentiality of the clients' projects and data.</p>
+                <h3 class="sub_title">Impact</h3>
+                <p class="article_text">The implementation of the cloud-based storage solution and secure network had a
+                    significant impact on the productivity and workflow of Inked Productions. The team was able to complete
+                    projects faster and more efficiently, with less downtime. The clients were also pleased with the level
+                    of security and peace of mind that came with having their projects and data protected.
+                </p>
+        </article>
+        
+    </section>      
 
         <footer class="flex row">
             <!-- footer nav  -->
             <nav class="footer_nav flex row">
                 <!-- main brand logo -->
-                <section class="brand flex">
+                <div class="brand flex">
                     <img src="/assets/images/logo_white.svg" alt="" class="brand_icon">
                     <a class="brand" href="index.html">
-                        <h1><span>ByteSized</span><br> Solutions</h1>
+                        <span>ByteSized</span><br> Solutions
                     </a>
-                </section>
+                </div>
                 <ul class=" nav_items flex row">
-                    <h6 class="footer_nav_items_title">Navigation</h6>
+                    <li class="footer_nav_items_title">Navigation</li>
                     <li><a class="nav_item" href="index.html">Home</a></li>
                     <li><a class="nav_item" href="about.html">About</a></li>
                     <li><a class="nav_item" href="about.html/#services">Services</a></li>
