--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <!-- navbar -->
         <nav class="header flex container relative">
             <!-- main brand logo -->
-            <section class="brand flex">
+            <div class="brand flex">
                 <img src="/assets/images/logo.svg" alt="" class="brand_icon">
                 <a class="brand" href="index.html">
-                    <h1><span>ByteSized</span><br> Solutions</h1>
+                    <span>ByteSized</span><br> Solutions
                 </a>
-            </section>
+            </div>
             <!--mobile nav toggle-->
             <label class="hamburger_icon" for="toggle"><i class="fa fa-bars"></i></label>
             <input type="checkbox" id="toggle" hidden>
@@ -127,7 +127,7 @@
         <section class="offers container flex row section_spacing">
             <h2 class="section_title">Why Choose Us</h2>
             <p class="section_text">At Bytesized Solutions, our priority is to help businesses like yours understand the benefits of incorporating technology into their operations. Our team is highly concerned about how technology can positively impact your business, improve efficiency, reduce costs, and ultimately drive success. To help you better understand the value of IT integration, we encourage you to watch this video that showcases the benefits of IT and Technology for businesses. By partnering with us, you'll receive personalized support from a team of experts who are dedicated to helping you reach your goals.</p>
-            <iframe width="100%" height="315px" src="https://www.youtube.com/embed/yBUMLYw17t4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="" height="" src="https://www.youtube.com/embed/yBUMLYw17t4" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             
 
             <!-- offers cards -->
@@ -288,14 +288,14 @@
             <!-- footer nav  -->
             <nav class="footer_nav flex row">
                 <!-- main brand logo -->
-                <section class="brand flex">
-                    <img src="/assets/images/logo_white.svg" alt="" class="brand_icon">
+                <div class="brand flex">
+                    <img src="/assets/images/logo_white.svg" alt="brand logo" class="brand_icon">
                     <a class="brand" href="index.html">
-                        <h1><span>ByteSized</span><br> Solutions</h1>
+                        <span>ByteSized</span><br> Solutions
                     </a>
-                </section>
+                </div>
                 <ul class=" footer_nav_items flex row">
-                    <h6 class="footer_nav_items_title">Navigation</h6>
+                    <li class="footer_nav_items_title">Navigation</li>
                     <li><a class="nav_item" href="index.html">Home</a></li>
                     <li><a class="nav_item" href="about.html">About</a></li>
                     <li><a class="nav_item" href="about.html/#services">Services</a></li>
