fixed bugs on home page

--- a/index.html
+++ b/index.html
@@ -16,21 +16,24 @@
         <!-- navbar -->
         <nav class="header flex container relative">
             <!-- main brand logo -->
-            <div class="brand flex">
-                <img src="/assets/images/logo.svg" alt="" class="brand_icon">
-                <a class="brand" href="index.html">
-                    <span>ByteSized</span><br> Solutions
-                </a>
-            </div>
+
+            <a class="brand grid" href="/index.html">
+                <img src="/assets/images/logo.svg" alt="brand logo" class="brand_icon">
+                <div>
+                    <span>ByteSized</span><br>
+                <span class='brand_solutions'>Solutions</span>
+                </div>
+            </a>
+
             <!--mobile nav toggle-->
             <label class="hamburger_icon" for="toggle"><i class="fa fa-bars"></i></label>
             <input type="checkbox" id="toggle" hidden>
 
             <ul class=" nav_items flex">
-                <li><a aria-current="page" class="nav_item" href="index.html">Home</a></li>
-                <li><a class="nav_item" href="about.html">About</a></li>
-                <li><a class="nav_item" href="about.html#services">Services</a></li>
-                <li><a class="nav_item" href="projects.html">Projects</a></li>
+                <li><a aria-current="page" class="nav_item" href="/projects.html">Home</a></li>
+                <li><a class="nav_item" href="/about.html">About</a></li>
+                <li><a class="nav_item" href="/about.html">Services</a></li>
+                <li><a class="nav_item" href="/projects.html">Projects</a></li>
                 <li><a class="nav_item btn btn_pry" href="#contact">Get In Touch</a></li>
             </ul>
         </nav>
@@ -103,8 +106,8 @@
                             class="fa fa-arrow-right"></i></a>
                 </div>
                 <div class=" card">
-                    <img src="./assets/images/programming-web-code-blue-screen-17122.svg" alt="sicon of programming code symbol"
-                        class="service_card_image">
+                    <img src="./assets/images/programming-web-code-blue-screen-17122.svg"
+                        alt="sicon of programming code symbol" class="service_card_image">
                     <h3 class="card_title">Software Development and Customization</h3>
                     <span class="card_text">Get the software your business needs with our customized software
                         development services.</span>
@@ -126,9 +129,16 @@
         <!-- why choose us section  -->
         <section class="offers container flex row section_spacing">
             <h2 class="section_title">Why Choose Us</h2>
-            <p class="section_text">At Bytesized Solutions, our priority is to help businesses like yours understand the benefits of incorporating technology into their operations. Our team is highly concerned about how technology can positively impact your business, improve efficiency, reduce costs, and ultimately drive success. To help you better understand the value of IT integration, we encourage you to watch this video that showcases the benefits of IT and Technology for businesses. By partnering with us, you'll receive personalized support from a team of experts who are dedicated to helping you reach your goals.</p>
-            <iframe width="" height="" src="https://www.youtube.com/embed/yBUMLYw17t4" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            
+            <p class="section_text">At Bytesized Solutions, our priority is to help businesses like yours understand the
+                benefits of incorporating technology into their operations. Our team is highly concerned about how
+                technology can positively impact your business, improve efficiency, reduce costs, and ultimately drive
+                success. To help you better understand the value of IT integration, we encourage you to watch this video
+                that showcases the benefits of IT and Technology for businesses. By partnering with us, you'll receive
+                personalized support from a team of experts who are dedicated to helping you reach your goals.</p>
+            <iframe src="https://www.youtube.com/embed/yBUMLYw17t4" title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+
 
             <!-- offers cards -->
             <div class="services_cards grid">
@@ -199,7 +209,8 @@
                             growing business. With the increasing demand for their services, they required a reliable
                             and efficient IT solution that could meet their unique needs and support their growing
                             business.</span>
-                            <a href="about.html#services" class="btn btn_sec card_btn">Read more <i class="fa fa-arrow-right"></i></a>
+                        <a href="about.html#services" class="btn btn_sec card_btn">Read more <i
+                                class="fa fa-arrow-right"></i></a>
                     </section>
                 </div>
                 <div class="case_card grid">
@@ -214,11 +225,12 @@
                             needed a reliable and efficient solution to keep up with their growing demands and ensure
                             their workflow remains smooth and seamless. With this in mind, they approached ByteSized
                             Solutions for help.</span>
-                            <a href="about.html#services" class="btn btn_sec card_btn">Read more <i class="fa fa-arrow-right"></i></a>
+                        <a href="/about.html#services" class="btn btn_sec card_btn">Read more <i
+                                class="fa fa-arrow-right"></i></a>
                     </section>
                 </div>
                 <div class="case_card grid">
-                    <img class="card_image" src="./assets/images/website.jpg"
+                    <img class="card_image" src="/assets/images/website.jpg"
                         alt="image of a laptop showing a website on the screen. In the background is an imac showing the same website">
                     <section class="card_article">
                         <h3 class="card_title">SoundBeetle Music</h3>
@@ -229,7 +241,8 @@
                             robust and scalable application that would meet the needs of their growing business and
                             customer base. With the help of ByteSized Solutions, they were able to turn their vision
                             into a reality.</span>
-                            <a href="about.html#services" class="btn btn_sec card_btn">Read more <i class="fa fa-arrow-right"></i></a>
+                        <a href="/about.html#services" class="btn btn_sec card_btn">Read more <i
+                                class="fa fa-arrow-right"></i></a>
                     </section>
                 </div>
             </div>
@@ -290,16 +303,16 @@
                 <!-- main brand logo -->
                 <div class="brand flex">
                     <img src="/assets/images/logo_white.svg" alt="brand logo" class="brand_icon">
-                    <a class="brand" href="index.html">
+                    <a class="brand" href="/index.html">
                         <span>ByteSized</span><br> Solutions
                     </a>
                 </div>
                 <ul class=" footer_nav_items flex row">
                     <li class="footer_nav_items_title">Navigation</li>
-                    <li><a class="nav_item" href="index.html">Home</a></li>
-                    <li><a class="nav_item" href="about.html">About</a></li>
-                    <li><a class="nav_item" href="about.html/#services">Services</a></li>
-                    <li><a class="nav_item" href="projects.html">Projects</a></li>
+                    <li><a class="nav_item" href="/index.html">Home</a></li>
+                    <li><a class="nav_item" href="/about.html">About</a></li>
+                    <li><a class="nav_item" href="/about.html/#services">Services</a></li>
+                    <li><a class="nav_item" href="/projects.html">Projects</a></li>
                     <li><a class="nav_item btn btn_pry cta" href="#contact">Get In Touch</a></li>
                 </ul>
             </nav>
