--- a/about.html
+++ b/about.html
@@ -16,21 +16,24 @@
         <!-- navbar -->
         <nav class="header flex container relative">
             <!-- main brand logo -->
-            <section class="brand flex">
-                <img src="/assets/images/logo.svg" alt="" class="brand_icon">
-                <a class="brand" href="index.html">
-                    <h1><span>ByteSized</span><br> Solutions</h1>
-                </a>
-            </section>
+
+            <a class="brand grid" href="/index.html">
+                <img src="/assets/images/logo.svg" alt="brand logo" class="brand_icon">
+                <div>
+                    <span>ByteSized</span><br>
+                <span class='brand_solutions'>Solutions</span>
+                </div>
+            </a>
+
             <!--mobile nav toggle-->
             <label class="hamburger_icon" for="toggle"><i class="fa fa-bars"></i></label>
-            <input type="checkbox" name="" id="toggle" hidden>
+            <input type="checkbox" id="toggle" hidden>
 
             <ul class=" nav_items flex">
-                <li><a  class="nav_item" href="index.html">Home</a></li>
-                <li><a aria-current="page" class="nav_item" href="about.html">About</a></li>
-                <li><a class="nav_item" href="about.html#services">Services</a></li>
-                <li><a class="nav_item" href="projects.html">Projects</a></li>
+                <li><a class="nav_item" href="/projects.html">Home</a></li>
+                <li><a aria-current="page" class="nav_item" href="/about.html">About</a></li>
+                <li><a class="nav_item" href="/about.html">Services</a></li>
+                <li><a class="nav_item" href="/projects.html">Projects</a></li>
                 <li><a class="nav_item btn btn_pry" href="#contact">Get In Touch</a></li>
             </ul>
         </nav>
@@ -202,22 +205,20 @@
 
         <footer class="flex row">
             <!-- footer nav  -->
-            <nav class="footer_nav flex row center">
+            <nav class="footer_nav flex row">
                 <!-- main brand logo -->
-                <div class="brand_grp flex column">
-                    <section class="brand flex">
-                        <img src="/assets/images/logo_white.svg" alt="" class="brand_icon">
-                        <a class="brand" href="index.html">
-                            <h1><span>ByteSized</span><br> Solutions</h1>
-                        </a>
-                    </section>
+                <div class="brand flex">
+                    <img src="/assets/images/logo_white.svg" alt="brand logo" class="brand_icon">
+                    <a class="brand" href="/index.html">
+                        <span>ByteSized</span><br> Solutions
+                    </a>
                 </div>
-                <ul class=" nav_items flex row">
-                    <h6 class="footer_nav_items_title">Navigation</h6>
-                    <li><a class="nav_item" href="index.html">Home</a></li>
-                    <li><a class="nav_item" href="about.html">About</a></li>
-                    <li><a class="nav_item" href="about.html/#services">Services</a></li>
-                    <li><a class="nav_item" href="projects.html">Projects</a></li>
+                <ul class=" footer_nav_items flex row">
+                    <li class="footer_nav_items_title">Navigation</li>
+                    <li><a class="nav_item" href="/index.html">Home</a></li>
+                    <li><a class="nav_item" href="/about.html">About</a></li>
+                    <li><a class="nav_item" href="/about.html/#services">Services</a></li>
+                    <li><a class="nav_item" href="/projects.html">Projects</a></li>
                     <li><a class="nav_item btn btn_pry cta" href="#contact">Get In Touch</a></li>
                 </ul>
             </nav>
