fix w3 errors on services page

--- a/services.html
+++ b/services.html
@@ -14,41 +14,47 @@
 <body>
     <header>
         <!-- navbar -->
-        <nav class="header flex container about_servicessection_spacing relative">
+        <nav class="header flex container relative">
             <!-- main brand logo -->
-            <section class="brand flex">
-                <img src="/assets/images/logo.svg" alt="" class="brand_icon">
-                <a class="brand" href="index.html">
-                    <h1><span>ByteSized</span><br> Solutions</h1>
-                </a>
-            </section>
+
+            <a class="brand grid" href="/index.html">
+                <img src="/assets/images/logo.svg" alt="brand logo" class="brand_icon">
+                <div>
+                    <span>ByteSized</span><br>
+                    <span class='brand_solutions'>Solutions</span>
+                </div>
+            </a>
+
             <!--mobile nav toggle-->
             <label class="hamburger_icon" for="toggle"><i class="fa fa-bars"></i></label>
-            <input type="checkbox" name="" id="toggle" hidden>
+            <input type="checkbox" id="toggle" hidden>
 
             <ul class=" nav_items flex">
-                <li><a class="nav_item" href="index.html">Home</a></li>
-                <li><a class="nav_item" href="about.html">About</a></li>
-                <li><a aria-current="page" class="nav_item" href="services.html">Services</a></li>
-                <li><a class="nav_item" href="projects.html">Projects</a></li>
+                <li><a class="nav_item" href="/projects.html">Home</a></li>
+                <li><a aria-current="page" class="nav_item" href="/about.html">About</a></li>
+                <li><a class="nav_item" href="/about.html">Services</a></li>
+                <li><a class="nav_item" href="/projects.html">Projects</a></li>
                 <li><a class="nav_item btn btn_pry" href="#contact">Get In Touch</a></li>
             </ul>
         </nav>
     </header>
     <main>
-                <!-- hero section -->
-                <section id="hero" class="hero flex row">
-                    <div class="main_text flex row">
-                        <h1 class="main_title">Services</h1>
+        <!-- hero section -->
+        <section id="hero" class="hero flex row">
+            <div class="main_text flex row">
+                <h1 class="main_title">Services</h1>
                 <p class="main_subtitle">Explore posibilities</p>
 
-                    </div>
-        
-                </section>
+            </div>
+
+        </section>
         <section class="container about_services section_spacing grid services_articles">
             <h2>Cloud Computing Solutions</h2>
             <article class="services_article_block  grid">
-            <iframe width="100%" height="315" src="https://www.youtube.com/embed/hB1NVzqn7PU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/hB1NVzqn7PU"
+                    title="YouTube video player"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
 
                 <h3>Cloud computing: The future of computing, in a fluffy white package.</h3>
                 <p>Cloud computing solutions are revolutionizing the way businesses approach technology. With the
@@ -74,12 +80,15 @@
                 </ul>
 
             </article>
-            
+
         </section>
         <section class="container about_servicessection_spacing grid services_articles">
             <h2>Cyber Security and Data Protection</h2>
             <article class="services_article_block  grid">
-                <iframe width="100%" height="315" src="https://www.youtube.com/embed/1vV0t2XbtuU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/1vV0t2XbtuU"
+                    title="YouTube video player"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
 
                 <h3>Why did the cyber criminal cross the network? To get to the other side and steal your data!</h3>
                 <p>Cybersecurity is a critical concern for businesses of all sizes, as the threat of cyber attacks and
@@ -105,7 +114,10 @@
 
             <article class="services_article_block  grid">
                 <h3>Making technology work for you, not the other way around.</h3>
-                <iframe width="100%" height="315" src="https://www.youtube.com/embed/iyLWgpghjHY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/iyLWgpghjHY"
+                    title="YouTube video player"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
 
                 <p>A well-designed and implemented network is crucial for businesses to operate effectively and
                     efficiently. Here are three benefits of network design and implementation:</p>
@@ -125,8 +137,11 @@
         <section class="container about_servicessection_spacing grid services_articles">
             <h2>Managed IT Services</h2>
             <article class="services_article_block  grid">
-                <iframe width="100%" height="315" src="https://www.youtube.com/embed/4vkIaBUsNvI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            <h3>Because technology is too complicated for just one person to handle.</h3>
+                <iframe src="https://www.youtube.com/embed/4vkIaBUsNvI"
+                    title="YouTube video player"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+                <h3>Because technology is too complicated for just one person to handle.</h3>
                 <p>Managed IT services provide a comprehensive solution for businesses to manage and maintain their
                     technology infrastructure. With these services, businesses can take advantage of the latest
                     technology, increase efficiency, and reduce costs. Here are a few benefits of managed IT services:
@@ -148,7 +163,10 @@
         <section class="container about_servicessection_spacing grid services_articles">
             <h2>Software Development and Customization</h2>
             <article class="services_article_block  grid">
-                <iframe width="100%" height="315" src="https://www.youtube.com/embed/fGdqnWWAXE0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/fGdqnWWAXE0"
+                    title="YouTube video player"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
                 <h3>The era of applications; a direct window to your customers</h3>
                 <p>Software development and customization can help businesses take advantage of the latest technology to
                     achieve their business goals. With these services, businesses can create custom software solutions
@@ -171,7 +189,10 @@
         <section class="container about_servicessection_spacing grid services_articles">
             <h2>Quality Assurance and Testing</h2>
             <article class="services_article_block  grid">
-            <iframe width="100%" height="315" src="https://www.youtube.com/embed/0hzqHwu1i_I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/0hzqHwu1i_I"
+                    title="YouTube video player"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
 
                 <h3>Be reliable, stay reliable!</h3>
                 <p>Quality assurance and testing is a critical aspect of software development and technology management.
@@ -194,22 +215,20 @@
 
         <footer class="flex row">
             <!-- footer nav  -->
-            <nav class="footer_nav flex row center">
+            <nav class="footer_nav flex row">
                 <!-- main brand logo -->
-                <div class="brand_grp flex column">
-                    <section class="brand flex">
-                        <img src="/assets/images/logo_white.svg" alt="" class="brand_icon">
-                        <a class="brand" href="index.html">
-                            <h1><span>ByteSized</span><br> Solutions</h1>
-                        </a>
-                    </section>
+                <div class="brand flex">
+                    <img src="/assets/images/logo_white.svg" alt="brand logo" class="brand_icon">
+                    <a class="brand" href="/index.html">
+                        <span>ByteSized</span><br> Solutions
+                    </a>
                 </div>
-                <ul class=" nav_items flex row">
-                    <h6 class="footer_nav_items_title">Navigation</h6>
-                    <li><a class="nav_item" href="index.html">Home</a></li>
-                    <li><a class="nav_item" href="about.html">About</a></li>
-                    <li><a class="nav_item" href="about.html/#services">Services</a></li>
-                    <li><a class="nav_item" href="projects.html">Projects</a></li>
+                <ul class=" footer_nav_items flex row">
+                    <li class="footer_nav_items_title">Navigation</li>
+                    <li><a class="nav_item" href="/index.html">Home</a></li>
+                    <li><a class="nav_item" href="/about.html">About</a></li>
+                    <li><a class="nav_item" href="/about.html/#services">Services</a></li>
+                    <li><a class="nav_item" href="/projects.html">Projects</a></li>
                     <li><a class="nav_item btn btn_pry cta" href="#contact">Get In Touch</a></li>
                 </ul>
             </nav>
